# Game_TicTacToe

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
client/: CMakeLists.txt  client.h  client_app.cpp  client_utils.cpp
server/: CMakeLists.txt  server.h  server_app.cpp  server_utils.cpp
