# CMakeList.txt: проект CMake для Game_xo; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#

# Добавьте источник в исполняемый файл этого проекта.
add_executable (client_app "client_app.cpp" "client.h" "client_utils.cpp")



# TODO: Добавьте тесты и целевые объекты, если это необходимо.
